--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,22 @@
-table {
-  width: 100%;
-  border: 1px solid #ddd;
-  margin: 20px 0;
+* {
+  box-sizing: border-box;
 }
 
-th,
-td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
+html, head, body {
+  margin: 0;
 }
 
-input[type="checkbox"] {
-  margin: 0 5px;
+h1, h2, h3, h4, h5 {
+  margin: 0;
 }
 
-button {
-  cursor: pointer;
-  margin: 5px;
-  padding: 5px 10px;
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.a4-container {
+  width: 220mm;
+  box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.1);  
 }
