--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,6 @@ h1, h2, h3, h4, h5 {
 
 .a4-container {
   width: 220mm;
-  box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.1);  
+  padding: 16px;
+  box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.1);
 }
